--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -2,8 +2,11 @@
 name = "runtime"
 version = "0.1.0"
 edition = "2021"
-
+[lib]
+crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
+wasmtime-wasi = "0.34.0"
+wasmtime-wasi-crypto = "0.34.0"
