--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: rustup component add clippy
-      - run: cargo clippy
+      - run: cargo clippy -- -D warnings
