Add install cargo wasi step in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install cbindgen
         run: cargo install cbindgen
+      - name: Install cargo wasi
+        run: cargo install cargo-wasi
       - name: Build
         run: make build-pkg
       - name: Run tests
