--- a/defichain-ffi/Cargo.toml
+++ b/defichain-ffi/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-links = "leveldb"
+#links = "leveldb"
 
 [dependencies]
 cxx = "1.0"
