--- a/ain-grpc/Cargo.toml
+++ b/ain-grpc/Cargo.toml
@@ -17,5 +17,9 @@ tonic = "0.7"
 
 [build-dependencies]
 cxx-gen = "0.7"
+heck = "0.4"
 proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "1.0", features = ["full"] }
+prost-build = "0.10"
 tonic-build = "0.7"
