--- a/ain-grpc/Cargo.toml
+++ b/ain-grpc/Cargo.toml
@@ -9,7 +9,11 @@ crate-type = ["staticlib"]
 
 [dependencies]
 cxx = "1.0"
+env_logger = "0.9"
+jsonrpsee = { version = "0.12", features = ["http-server"] }
+jsonrpsee-core = "0.12"
 # jsonrpc-v2 = "0.11"
+log = "0.4"
 prost = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
