--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,9 @@ jobs:
         run: cargo install cbindgen
       - name: Install cargo wasi
         run: cargo install cargo-wasi
-      - name: Build
-        run: make build-pkg
+      - name: Build wasm
+        run: make build-wasm-pkg
+      - name: Build lib
+        run: make build-grpc-pkg
       - name: Run tests
         run: cargo test --verbose --workspace
