--- a/ain-grpc/Cargo.toml
+++ b/ain-grpc/Cargo.toml
@@ -15,6 +15,7 @@ jsonrpsee-core = "0.14"
 jsonrpsee-types = "0.14"
 # jsonrpc-v2 = "0.11"
 log = "0.4"
+num-traits = "0.2"
 prost = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
