--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "ain-core",
     "ain-grpc",
-    "wasm-modules/dex",
-    "wasm-runtime",
+    # TODO: Temporarily disable them due to errors
+    # "wasm-modules/dex",
+    # "wasm-runtime",
 ]
