--- a/ain-grpc/Cargo.toml
+++ b/ain-grpc/Cargo.toml
@@ -10,10 +10,10 @@ crate-type = ["staticlib"]
 [dependencies]
 cxx = "1.0"
 env_logger = "0.9"
-jsonrpsee = { version = "0.14", features = ["http-server"] }
+jsonrpsee = { version = "0.14", features = ["http-server", "http-client"] }
 jsonrpsee-core = "0.14"
 jsonrpsee-types = "0.14"
-# jsonrpc-v2 = "0.11"
+lazy_static = "1.4"
 log = "0.4"
 num-traits = "0.2"
 prost = "0.10"
