--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
       #   run: cargo install cargo-wasi
       # - name: Build wasm
       #   run: make build-wasm-pkg
+      - name: Install deps
+        run: sudo make install-deps
       - name: Build lib
         run: make build-grpc-pkg
       - name: Build core
